# openplugin

./: .gitignore  COMPARISON.md  CONTRIBUTING.md  QUICKSTART.md  QUICK_EMAIL_EXAMPLE.md  README.md  README_EMAIL_APP.md  USE_CASES.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  AUTOMATIC_TOOL_SELECTION.md  EMAIL_APP_TUTORIAL.md  GETTING_STARTED.md  PLUGIN_IDEAS.md  SALESFORCE_PLUGIN.md  SKILLSMP_COMPATIBILITY.md  STORY_PLUGIN_TUTORIAL.md  TOKEN_USAGE_EXPLAINED.md  WEB_SEARCH_PLUGIN.md
examples/: README.md  __init__.py  basic_usage.py  email_app.py  import_skillsmp_skill.py  multi_plugin_demo.py  salesforce_app.py  smart_qa_app.py  story_app.py  token_usage_demo.py  web_search_app.py
openplugin/: __init__.py
openplugin/core/: __init__.py  plugin.py  plugin_manager.py  smart_agent.py
openplugin/mcp/: __init__.py  client.py  server.py
openplugin/providers/: base.py  openai_provider.py
openplugin/utils/: __init__.py  email_sender.py  salesforce_client.py  web_search.py
plugins/code-plugin/: README.md
plugins/code-plugin/.claude-plugin/: plugin.json
plugins/code-plugin/commands/: analyze.md  explain.md  refactor.md
plugins/email-plugin/: README.md
plugins/email-plugin/.claude-plugin/: plugin.json
plugins/email-plugin/commands/: draft.md  send.md
plugins/example-plugin/: README.md
plugins/example-plugin/.claude-plugin/: plugin.json
plugins/salesforce-plugin/: README.md
plugins/story-plugin/: README.md
plugins/text-processing-plugin/: README.md
plugins/translation-plugin/: README.md
plugins/web-search-plugin/: README.md
utils/: skillsmp_importer.py
(+19 files in other folders)
